# audio-synthesis-demo

./: .cleanupignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  OPTIMIZATION_PLAN.md  PROJECT_EXPLANATION.md  README.md  TTS_UPGRADE_GUIDE.md  _run_backend.bat  _run_celery.bat  _run_frontend.bat  app.py  cleanup_tool.py  docker-compose.dev.yml  embedded_server.py  project_guard.py  project_guard_rules.yaml  run.py  server.py  server_platform.py  sitecustomize.py  start.bat  start_demo.bat  start_platform.bat  stop.bat  upload_all_to_github.bat  更新本地到GitHub最新版.bat
backend/: Dockerfile  pyproject.toml
backend/app/: celery_app.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  files.py  folders.py  meta.py  tasks.py  voices.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/data/: preset_topics.json
backend/app/models/: __init__.py  audio_file.py  folder.py  tag.py  task.py  transcript.py  user.py  voice_catalog.py
backend/app/providers/llm/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py
backend/app/providers/storage/: minio_client.py
backend/app/providers/tts/: __init__.py  base.py  cosyvoice.py  edge_tts_provider.py  (+1 more)
backend/app/schemas/: audio_file.py  folder.py  task.py  user.py  voice.py
backend/app/scripts/: init_db.py  init_voice_catalog.py
backend/app/services/: audio.py  dialogue.py  few_shot.py  multilingual_naturalness_lite.py  postprocess.py  preset_topics.py  quality_check.py  scripts.py  tags.py
backend/app/tasks/: cleanup.py  generation.py
(+6954 files in other folders)
