[project]
name = "audio-platform-backend"
version = "0.1.0"
description = "Audio corpus generation platform backend"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # DB
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.0",
    "alembic>=1.14.0",

    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "google-auth>=2.35.0",     # 验证 Google ID Token
    "requests>=2.32.0",        # google-auth 的 transport 依赖

    # Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # Storage
    "minio>=7.2.0",

    # HTTP / LLM clients
    "httpx>=0.27.0",
    "openai>=1.54.0",          # DeepSeek 兼容 OpenAI 协议
    "anthropic>=0.39.0",        # 备选

    # Audio
    "pydub>=0.25.1",

    # Logging
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
